inlcuir CQRS al plan